# dining-philosophers

./: .gitignore  CMakeLists.txt  Fork.cpp  Makefile  Philosopher.cpp  README.md  dinning-phils  main.cpp
